FIX - example-text whitespace wrapping issues

--- a/wordweb-app/src/main/resources/scss/_dependencies.scss
+++ b/wordweb-app/src/main/resources/scss/_dependencies.scss
@@ -32,18 +32,20 @@
 
 .example-text {
   font-style: italic;
+  .example-text-value{
+    white-space: nowrap;
+  }
 }
 .example-sentence-wrap{
   .example-text{
-    padding-left: .5rem;
-    margin-left: .5rem;
-    border-left: 1px solid $gray-900;
+    padding-right: .5rem;
+    margin-right: .5rem;
+    border-right: 1px solid $gray-900;
 
-    &:first-child,
-    &:nth-child(2){
-      padding-left: 0;
-      margin-left: 0;
-      border-left: 0;
+    &:last-child{
+      padding-right: 0;
+      margin-right: 0;
+      border-right: 0;
     }
   }
 
